src/test/ui/error-codes/E0283.stderr
error[E0283]: type annotations needed
  --> $DIR/E0283.rs:30:21
   |
LL |     let cont: u32 = Generator::create();
   |                     ^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: Generator`

error[E0283]: type annotations needed
  --> $DIR/E0283.rs:35:24
   |
LL |     let bar = foo_impl.into() * 1u32;
   |               ---------^^^^--
   |               |        |
   |               |        cannot infer type for type parameter `T` declared on the trait `Into`
   |               this method call resolves to `T`
   |               help: use the fully qualified path for the potential candidate: `<Impl as Into<u32>>::into(foo_impl)`
   |
note: multiple `impl`s satisfying `Impl: Into<_>` found
  --> $DIR/E0283.rs:17:1
   |
LL | impl Into<u32> for Impl {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: and another `impl` found in the `core` crate:
           - impl<T, U> Into<U> for T
             where U: From<T>;

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
